[gd_scene load_steps=35 format=2]

[ext_resource path="res://Ext/RetroRemake/levelbuttonicons/134.png" type="Texture" id=1]
[ext_resource path="res://Ext/RetroRemake/mapimages/179.png" type="Texture" id=2]
[ext_resource path="res://Ext/RetroRemake/mapicons/001.png" type="Texture" id=3]
[ext_resource path="res://Fonts/TextFont_Large.tres" type="DynamicFont" id=4]
[ext_resource path="res://Ext/RetroRemake/mapimages/127.png" type="Texture" id=5]
[ext_resource path="res://Ext/RetroRemake/mapimages/212.png" type="Texture" id=6]
[ext_resource path="res://Screens/RebornRemake/RE-ScreenSelectChapter/RE-ScreenSelectChapter.gd" type="Script" id=7]
[ext_resource path="res://Ext/back1.png" type="Texture" id=8]
[ext_resource path="res://Ext/RetroRemake/mapicons/159.png" type="Texture" id=9]
[ext_resource path="res://Ext/RetroRemake/mapimages/107.png" type="Texture" id=10]
[ext_resource path="res://Ext/RetroRemake/levelbuttonicons/131.png" type="Texture" id=11]
[ext_resource path="res://Ext/RetroRemake/levelbuttonicons/132.png" type="Texture" id=12]
[ext_resource path="res://Ext/RetroRemake/mapicons/007.png" type="Texture" id=13]
[ext_resource path="res://Ext/RetroRemake/levelbuttonicons/122.png" type="Texture" id=14]
[ext_resource path="res://Ext/RetroRemake/mapicons/014.png" type="Texture" id=15]
[ext_resource path="res://Ext/RetroRemake/levelbuttonicons/142.png" type="Texture" id=16]
[ext_resource path="res://Ext/RetroRemake/mapicons/002.png" type="Texture" id=17]
[ext_resource path="res://Screens/ScreenWithMenuElements.tscn" type="PackedScene" id=18]
[ext_resource path="res://Ext/RetroRemake/mapicons/090.png" type="Texture" id=19]
[ext_resource path="res://Ext/RetroRemake/mapimages/108_768.png" type="Texture" id=20]
[ext_resource path="res://Ext/RetroRemake/levelbuttonicons/124.png" type="Texture" id=21]
[ext_resource path="res://Ext/RetroRemake/levelbuttonicons/123.png" type="Texture" id=22]
[ext_resource path="res://Ext/RetroRemake/levelbuttonicons/138.png" type="Texture" id=23]
[ext_resource path="res://Ext/RetroRemake/levelbuttonicons/128.png" type="Texture" id=24]
[ext_resource path="res://Ext/RetroRemake/mapimages/106.png" type="Texture" id=25]
[ext_resource path="res://Ext/RetroRemake/mapimages/136.png" type="Texture" id=26]
[ext_resource path="res://Graphics/Common Arrow.png" type="Texture" id=27]
[ext_resource path="res://Ext/RetroRemake/levelbuttonicons/127.png" type="Texture" id=28]
[ext_resource path="res://Ext/RetroRemake/levelbuttonicons/126.png" type="Texture" id=29]
[ext_resource path="res://Ext/RetroRemake/levelbuttonicons/140.png" type="Texture" id=30]
[ext_resource path="res://Ext/RetroRemake/levelbuttonicons/125.png" type="Texture" id=31]
[ext_resource path="res://Ext/RetroRemake/levelbuttonicons/136.png" type="Texture" id=32]
[ext_resource path="res://Screens/RebornRemake/RE-ScreenSelectChapter/RE-StageSelectObj.tscn" type="PackedScene" id=33]
[ext_resource path="res://Ext/RetroRemake/levelbuttonicons/130.png" type="Texture" id=34]

[node name="RE-ScreenSelectChapter" instance=ExtResource( 18 )]
script = ExtResource( 7 )
PrevScreen = "RE-ScreenTitleMenu"
NextScreen = "RE-CutsceneFromFile"
HandlePhysicalBButton = false

[node name="ActorFrame_AreaSelect" type="Control" parent="." index="2"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Page1" type="Control" parent="ActorFrame_AreaSelect" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Sprite" type="TextureRect" parent="ActorFrame_AreaSelect/Page1" index="0"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -624.0
margin_right = 960.0
margin_bottom = 624.0
texture = ExtResource( 20 )
stretch_mode = 1

[node name="RE-1" type="TextureRect" parent="ActorFrame_AreaSelect/Page1" index="1"]
margin_left = 446.0
margin_top = 251.0
margin_right = 613.0
margin_bottom = 405.0
rect_scale = Vector2( 1.5, 1.5 )
mouse_default_cursor_shape = 2
texture = ExtResource( 14 )

[node name="RE-2" type="TextureRect" parent="ActorFrame_AreaSelect/Page1" index="2"]
margin_left = 282.0
margin_top = 598.0
margin_right = 429.0
margin_bottom = 709.0
rect_scale = Vector2( 1.5, 1.5 )
mouse_default_cursor_shape = 2
texture = ExtResource( 22 )

[node name="RE-3" type="TextureRect" parent="ActorFrame_AreaSelect/Page1" index="3"]
margin_left = 1357.0
margin_top = 347.0
margin_right = 1470.0
margin_bottom = 465.0
rect_scale = Vector2( 1.5, 1.5 )
mouse_default_cursor_shape = 2
texture = ExtResource( 21 )

[node name="Page2" type="Node2D" parent="ActorFrame_AreaSelect" index="1"]
position = Vector2( 1920, 0 )

[node name="Sprite" type="Sprite" parent="ActorFrame_AreaSelect/Page2" index="0"]
scale = Vector2( 1.875, 2.65 )
texture = ExtResource( 5 )
centered = false

[node name="RE-4" type="TextureRect" parent="ActorFrame_AreaSelect/Page2" index="1"]
margin_left = 350.0
margin_top = 870.0
margin_right = 517.0
margin_bottom = 1024.0
rect_scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 31 )

[node name="RE-5" type="TextureRect" parent="ActorFrame_AreaSelect/Page2" index="2"]
margin_left = 1218.0
margin_top = 644.0
margin_right = 1368.0
margin_bottom = 794.0
rect_scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 29 )

[node name="Page3" type="Node2D" parent="ActorFrame_AreaSelect" index="2"]
position = Vector2( 3840, 0 )

[node name="Sprite" type="Sprite" parent="ActorFrame_AreaSelect/Page3" index="0"]
scale = Vector2( 1.875, 2.65 )
texture = ExtResource( 26 )
centered = false

[node name="RE-6" type="TextureRect" parent="ActorFrame_AreaSelect/Page3" index="1"]
margin_left = 391.0
margin_top = 456.0
margin_right = 526.0
margin_bottom = 546.0
rect_scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 28 )

[node name="RE-7" type="TextureRect" parent="ActorFrame_AreaSelect/Page3" index="2"]
margin_left = 1323.0
margin_top = 677.0
margin_right = 1473.0
margin_bottom = 827.0
rect_scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 24 )

[node name="RE-8" type="TextureRect" parent="ActorFrame_AreaSelect/Page3" index="3"]
margin_left = 779.0
margin_top = 937.0
margin_right = 932.0
margin_bottom = 1087.0
rect_scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 34 )

[node name="Page4" type="Node2D" parent="ActorFrame_AreaSelect" index="3"]
position = Vector2( 5760, 0 )

[node name="Sprite" type="Sprite" parent="ActorFrame_AreaSelect/Page4" index="0"]
scale = Vector2( 1.875, 2.65 )
texture = ExtResource( 2 )
centered = false

[node name="RE-9" type="TextureRect" parent="ActorFrame_AreaSelect/Page4" index="1"]
margin_left = 327.0
margin_top = 772.0
margin_right = 462.0
margin_bottom = 887.0
rect_scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 11 )

[node name="RE-10" type="TextureRect" parent="ActorFrame_AreaSelect/Page4" index="2"]
margin_left = 732.0
margin_top = 379.0
margin_right = 882.0
margin_bottom = 529.0
rect_scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 12 )

[node name="RE-11" type="TextureRect" parent="ActorFrame_AreaSelect/Page4" index="3"]
margin_left = 1384.0
margin_top = 511.0
margin_right = 1537.0
margin_bottom = 661.0
rect_scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )

[node name="Page5" type="Node2D" parent="ActorFrame_AreaSelect" index="4"]
position = Vector2( 7680, 0 )

[node name="Sprite" type="Sprite" parent="ActorFrame_AreaSelect/Page5" index="0"]
scale = Vector2( 1.875, 1.32 )
texture = ExtResource( 6 )
centered = false

[node name="RE-12" type="TextureRect" parent="ActorFrame_AreaSelect/Page5" index="1"]
margin_left = 570.0
margin_top = 822.0
margin_right = 745.0
margin_bottom = 978.0
rect_scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 32 )

[node name="RE-13" type="TextureRect" parent="ActorFrame_AreaSelect/Page5" index="2"]
margin_left = 835.0
margin_top = 547.0
margin_right = 1010.0
margin_bottom = 703.0
rect_scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 23 )

[node name="RE-14" type="TextureRect" parent="ActorFrame_AreaSelect/Page5" index="3"]
margin_left = 95.0
margin_top = 538.0
margin_right = 290.0
margin_bottom = 694.0
rect_scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 30 )

[node name="RE-15" type="TextureRect" parent="ActorFrame_AreaSelect/Page5" index="4"]
margin_left = 1458.0
margin_top = 525.0
margin_right = 1666.0
margin_bottom = 628.0
rect_scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 16 )

[node name="ActorFrame_PartSelect" type="Control" parent="." index="3"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1920.0
margin_bottom = 1920.0

[node name="Chapter1-1" type="Control" parent="ActorFrame_PartSelect" index="0"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0

[node name="Sprite" type="TextureRect" parent="ActorFrame_PartSelect/Chapter1-1" index="0"]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 25 )
stretch_mode = 1

[node name="RE1-1" parent="ActorFrame_PartSelect/Chapter1-1" index="1" instance=ExtResource( 33 )]
margin_left = 238.0
margin_top = 438.0
margin_right = 356.0
margin_bottom = 603.0
mouse_default_cursor_shape = 2
icon = ExtResource( 3 )
label = "R1-1"

[node name="RE1-2" parent="ActorFrame_PartSelect/Chapter1-1" index="2" instance=ExtResource( 33 )]
margin_left = 630.0
margin_top = 302.0
margin_right = 748.0
margin_bottom = 467.0
mouse_default_cursor_shape = 2
icon = ExtResource( 13 )
label = "R1-2"

[node name="RE1-3" parent="ActorFrame_PartSelect/Chapter1-1" index="3" instance=ExtResource( 33 )]
margin_left = 965.0
margin_top = 233.0
margin_right = 1083.0
margin_bottom = 398.0
mouse_default_cursor_shape = 2
icon = ExtResource( 19 )
label = "R1-2A"

[node name="RE1-4" parent="ActorFrame_PartSelect/Chapter1-1" index="4" instance=ExtResource( 33 )]
margin_left = 1224.0
margin_top = 366.0
margin_right = 1342.0
margin_bottom = 531.0
mouse_default_cursor_shape = 2
icon = ExtResource( 15 )
label = "R1-3"

[node name="RE1-5" parent="ActorFrame_PartSelect/Chapter1-1" index="5" instance=ExtResource( 33 )]
margin_left = 1469.0
margin_top = 492.0
margin_right = 1587.0
margin_bottom = 657.0
mouse_default_cursor_shape = 2
icon = ExtResource( 9 )
label = "R1-4"

[node name="Chapter1-2" type="Control" parent="ActorFrame_PartSelect" index="1"]
margin_left = 1920.0
margin_right = 1920.0

[node name="Sprite" type="TextureRect" parent="ActorFrame_PartSelect/Chapter1-2" index="0"]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 10 )
stretch_mode = 1

[node name="RE1-6" parent="ActorFrame_PartSelect/Chapter1-2" index="1" instance=ExtResource( 33 )]
margin_left = 238.0
margin_top = 479.0
margin_right = 356.0
margin_bottom = 644.0
icon = ExtResource( 17 )
label = "R1-5"

[node name="Label" type="Label" parent="." index="4"]
margin_right = 363.0
margin_bottom = 75.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
custom_constants/shadow_as_outline = 2
custom_fonts/font = ExtResource( 4 )
text = "Position: 1"

[node name="Label2" type="Label" parent="." index="5"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -940.0
margin_top = -290.0
margin_right = 940.0
margin_bottom = -23.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
custom_constants/shadow_as_outline = 2
custom_fonts/font = ExtResource( 4 )
text = "This release brought 2 U by FoxgirlSniperZ! Join our discord today at discord.gg/HoukaiGakuen2!!
Fight for the next world!!"
valign = 2
autowrap = true

[node name="BackButton2" type="TextureButton" parent="." index="6"]
visible = false
margin_right = 215.0
margin_bottom = 49.0
rect_scale = Vector2( 2, 2 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 8 )

[node name="ArrowRight" type="TextureRect" parent="." index="7"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -130.0
margin_top = -103.0
margin_bottom = 103.0
rect_min_size = Vector2( 130, 206 )
rect_rotation = 180.0
rect_pivot_offset = Vector2( 65, 103 )
mouse_filter = 0
mouse_default_cursor_shape = 2
texture = ExtResource( 27 )
stretch_mode = 6

[node name="ArrowLeft" type="TextureRect" parent="." index="8"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -103.0
margin_right = 130.0
margin_bottom = 103.0
rect_min_size = Vector2( 130, 206 )
rect_pivot_offset = Vector2( 65, 103 )
mouse_filter = 0
mouse_default_cursor_shape = 2
texture = ExtResource( 27 )
stretch_mode = 6

[node name="Tween" type="Tween" parent="." index="9"]

[connection signal="gui_input" from="ArrowRight" to="." method="_on_ArrowRight_gui_input"]
[connection signal="gui_input" from="ArrowLeft" to="." method="_on_ArrowLeft_gui_input"]
